Partial_14Dec2021/force-app/main/default/objects/Redemption_Product__c/Redemption_Product__c.object-meta.xml
<CustomObject>
    <label>Redemption Product</label>
    <nameField>
        <label>Redemption Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Redemption Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>