Partial_14Dec2021/force-app/main/default/objects/Redemption_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Point__c</columns>
    <columns>Product_Id__c</columns>
    <columns>Redemption_Order__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>